<resources>
    <string name="app_name">My Finances</string>
    <string name="email">Correo electrónico</string>
    <string name="pass">Contraseña</string>
    <string name="title">My Finances</string>
    <string name="send">Iniciar sesión</string>
    <string name="error_pass">*Campo obligatorio</string>
    <string name="name">Nombre de usuario</string>
    <string name="repeatpass">Repetir contraseña</string>
    <string name="register">Registrarse</string>
    <string name="title2">Crear usuario</string>
    <string name="fieldcheck">* Obligatorio</string>
    <string name="Forgetpass">¿Has olvidado tu contraseña?</string>
    <string name="image">splash</string>
    <string name="logout">Cerrar sesión</string>
    <string name="errorlogin">Verifique el correo o regístrese</string>
    <string name="errorregister">Verifique todos los campos</string>
    <string name="errorpass">Contraseña incorrecta</string>
    <string name="gotoregister">Regístrate</string>
    <string name="coincidencia">Las contraseñas no coinciden</string>
    <string name="my_finance">MyFinance</string>
    <string name="digits8">El usuario debe tener al menos 8 caracteres</string>
    <string name="digits6">La contraseña debe tener al menos 6 caracteres</string>
    <string name="email_invalido">El Correo electrónico debe tener la forma example@email.com</string>
    <string name="registro">Registro</string>
    <string name="estad_sticas">Estadísticas</string>
    <string name="bienes">Bienes</string>
    <string name="ajustes">Ajustes</string>
    <string name="ingresos">Ingresos</string>
    <string name="gastos">Gastos</string>
    <string name="diario">Diario</string>
    <string name="semanal">Semanal</string>
    <string name="mensual">Mensual</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_registro">En este fragmento registrarás el diario de tus gastos e ingresos</string>
    <string name="label_estadisticas">En este fragmento encontrarás las estadísticas de tus movimientos</string>
    <string name="label_bienes">En este fragmento encontrarás los saldos a favor y tus obligaciones</string>
    <string name="label_ajustes">En este fragmento se podrán hacer ajustes de la aplicación</string>
</resources>